--- a/QareebApp/Pages/Orders/OrderIndex.razor
+++ b/QareebApp/Pages/Orders/OrderIndex.razor
@@ -25,7 +25,7 @@
         <MudTd DataLabel="CreatedOn">@context.CreatedOn.Value</MudTd>
     </RowTemplate>
     <PagerContent>
-        <MudPagination SelectedChanged="SelectedPage" Count="@MetaData.TotalPages" Class="pa-4" />
+        <MudPagination Selected=@MetaData.CurrentPage SelectedChanged="SelectedPage" Count="@MetaData.TotalPages" Class="pa-4" />
     </PagerContent>
 </MudTable>
 
