--- a/QareebApp/Pages/Drivers/DriverIndex.razor
+++ b/QareebApp/Pages/Drivers/DriverIndex.razor
@@ -43,7 +43,7 @@
         </MudTd>
     </RowTemplate>
     <PagerContent>
-        <MudPagination SelectedChaned="SelectedPage" Count="@MetaData.TotalPages" Class="pa-4" />
+        <MudPagination Selected=@MetaData.CurrentPage SelectedChanged="SelectedPage" Count="@MetaData.TotalPages" Class="pa-4" />
     </PagerContent>
 </MudTable>
 
